<resources>
    <string name="app_name">Github User</string>
    <string name="github_user">Github User</string>
    <string name="cari_user_github">Masukan user</string>
    <string name="username">Username</string>
    <string name="_0">0</string>
    <string name="repositori">Repo</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>